--- a/src/style.css
+++ b/src/style.css
@@ -246,19 +246,13 @@ body,
   font-size: 1rem;
   background-color: var(--bgcolor);
   color: var(--tcolor);
-  width: 100vw;
-  min-height: 100vh;
+  width: 100%;
   display: flex;
   flex-flow: column;
   letter-spacing: 0.025rem;
   word-spacing: 0.25rem;
   line-height: 1.25rem;
-  transition: all var(--transition-time) ease-in-out;
-  overflow-x: hidden; }
-
-#root {
-  width: 100%;
-  height: 100%; }
+  transition: all var(--transition-time) ease-in-out; }
 
 a {
   text-decoration: none;
@@ -273,6 +267,19 @@ a {
 
 img {
   pointer-events: none; }
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+  background-color: rgba(0, 0, 0, 0.01);
+  background-color: rgba(0, 0, 0, 0.99);
+  border: 4px solid transparent; }
+  ::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0.2); }
+  ::-webkit-scrollbar-thumb {
+    background-color: #7a7a7a; }
+    ::-webkit-scrollbar-thumb:hover {
+      background-color: #525252; }
 
 .header {
   width: 100%;
@@ -328,17 +335,18 @@ img {
   width: 100%;
   height: 100vh;
   color: var(--bgcolor); }
-  .home-hero {
+  .home > * {
     width: 100%;
     height: 100vh;
+    background-attachment: fixed;
+    background-blend-mode: darken;
+    background-color: rgba(0, 0, 0, 0.9);
+    background-size: cover; }
+  .home-hero {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-flow: column;
-    background-attachment: fixed;
-    background-blend-mode: darken;
-    background-color: rgba(0, 0, 0, 0.75);
-    background-size: cover; }
+    flex-flow: column; }
     .home-hero-image {
       width: 100%;
       height: 60%;
@@ -358,24 +366,41 @@ img {
       flex-flow: column;
       font-size: 3rem;
       line-height: 4rem;
+      position: relative;
+      top: 0;
+      left: 0;
       font-family: Audiowide, sans-serif; }
-    .home-hero::after {
-      font-family: "Material Icons";
-      content: "expand_more";
-      display: flex;
-      flex-flow: column;
-      position: absolute;
-      top: 95%;
-      font-size: 1.5rem;
-      transition: all var(--transition-time) ease-in-out;
-      animation: bounce 2s ease-in-out infinite; }
+      .home-hero-content::after {
+        font-family: "Material Icons";
+        content: "expand_more";
+        display: flex;
+        flex-flow: column;
+        position: absolute;
+        top: 80%;
+        font-size: 1.5rem;
+        animation: bounce 2s ease-in-out infinite; }
   .home-about {
     width: 100%;
-    height: 100vh;
-    background-attachment: fixed;
-    background-blend-mode: darken;
-    background-color: rgba(0, 0, 0, 0.75);
-    background-size: cover; }
+    display: flex;
+    flex-flow: column;
+    align-items: center; }
+    .home-about-logos {
+      width: 75%;
+      height: 50%;
+      display: flex; }
+    .home-about-logo {
+      width: 50%;
+      height: 100%; }
+      .home-about-logo a {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+      .home-about-logo__img {
+        object-fit: cover;
+        max-width: 75%;
+        max-height: 100%; }
 
 @keyframes bounce {
   0% {
@@ -388,17 +413,6 @@ img {
     transform: translateY(0.25rem); }
   100% {
     transform: translateY(0); } }
-
-::-webkit-scrollbar {
-  width: 6px;
-  background-color: rgba(0, 0, 0, 0.01);
-  border: 4px solid transparent; }
-  ::-webkit-scrollbar-track {
-    background-color: rgba(0, 0, 0, 0.2); }
-  ::-webkit-scrollbar-thumb {
-    background-color: #7a7a7a; }
-    ::-webkit-scrollbar-thumb:hover {
-      background-color: #525252; }
 
 .material-icons {
   user-select: none;
