--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,11 @@
   --tcolor-100: #333333;
   --tcolor-400: #272727;
   --tcolor-700: #1d1d1d;
+  --primary-1: #2d9aa6;
+  --primary-2: #9ad2d9;
+  --primary-3: #f2f2f2;
+  --primary-4: #404040;
+  --primary-5: #0d0d0d;
   --back-shadow: rgba(0, 0, 0, 0.2);
   --back-shadow-light: rgba(0, 0, 0, 0.1);
   --transition-time: 200ms;
@@ -256,7 +261,7 @@ body,
 
 a {
   text-decoration: none;
-  color: var(--tcolor);
+  color: inherit;
   border: none;
   outline: none; }
   a:hover, a:active, a:focus, a:visited {
@@ -333,7 +338,7 @@ img {
 
 .home {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   color: var(--bgcolor); }
   .home > * {
     width: 100%;
@@ -367,9 +372,19 @@ img {
       font-size: 3rem;
       line-height: 4rem;
       position: relative;
+      transition: all var(--transition-time) ease-in-out;
       top: 0;
       left: 0;
       font-family: Audiowide, sans-serif; }
+      .home-hero-content-left, .home-hero-content-right {
+        width: 25%;
+        height: 100%; }
+      .home-hero-content-mid {
+        width: 50%;
+        height: 100%;
+        display: flex;
+        flex-flow: column;
+        align-items: center; }
       .home-hero-content::after {
         font-family: "Material Icons";
         content: "expand_more";
@@ -378,29 +393,45 @@ img {
         position: absolute;
         top: 80%;
         font-size: 1.5rem;
+        color: var(--primary-3);
         animation: bounce 2s ease-in-out infinite; }
   .home-about {
     width: 100%;
+    height: 70vh;
     display: flex;
     flex-flow: column;
     align-items: center; }
-    .home-about-logos {
-      width: 75%;
-      height: 50%;
-      display: flex; }
-    .home-about-logo {
-      width: 50%;
-      height: 100%; }
-      .home-about-logo a {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center; }
-      .home-about-logo__img {
-        object-fit: cover;
-        max-width: 75%;
-        max-height: 100%; }
+    .home-about > * {
+      width: 100%;
+      height: 50%; }
+  .home-duration {
+    width: 100%;
+    height: 10rem;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .home-duration-timer {
+      width: 60%;
+      height: 100%;
+      font-size: 4.5rem;
+      font-weight: 700;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center; }
+      .home-duration-timer span {
+        font-size: 1.5rem;
+        font-weight: 400;
+        margin: 0 0.5rem;
+        font-family: Audiowide, sans-serif; }
+      .home-duration-timer-days {
+        color: var(--primary-1); }
+      .home-duration-timer-hours {
+        color: #ff2d55; }
+      .home-duration-timer-seconds {
+        color: var(--yellow); }
+      @media (max-width: 880px) {
+        .home-duration-timer {
+          width: 100%; } }
 
 @keyframes bounce {
   0% {
@@ -413,6 +444,150 @@ img {
     transform: translateY(0.25rem); }
   100% {
     transform: translateY(0); } }
+
+.footer {
+  width: 100%;
+  height: 50vh;
+  overflow: hidden;
+  background-color: var(--primary-5);
+  color: var(--bgcolor);
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .footer-left {
+    width: 60%;
+    height: 100%;
+    display: flex;
+    flex-flow: column; }
+    .footer-left-top {
+      width: 100%;
+      height: 15%;
+      padding: 1rem 0;
+      font-size: 2rem;
+      line-height: 2rem;
+      font-weight: 700;
+      font-family: Audiowide, sans-serif;
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start; }
+      @media (max-width: 880px) {
+        .footer-left-top {
+          justify-content: center; } }
+    .footer-left-mid {
+      width: 100%;
+      height: 60%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0 2rem;
+      font-size: 0.9rem; }
+      .footer-left-mid-left {
+        width: 25%;
+        height: 100%;
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        align-items: center; }
+        .footer-left-mid-left-link {
+          width: 100%;
+          display: flex;
+          justify-content: flex-start;
+          align-items: center; }
+      .footer-left-mid-right {
+        width: 75%;
+        height: 100%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        flex-flow: column; }
+        .footer-left-mid-right-head {
+          width: 100%;
+          height: 15%;
+          padding: 1.5rem 0; }
+      .footer-left-mid a {
+        width: 100%;
+        height: 1.5rem;
+        opacity: 0.5;
+        padding: 0.5rem;
+        margin: 0.25rem 0.5rem;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        transition: all var(--transition-time) ease-in-out; }
+        .footer-left-mid a:hover {
+          opacity: 1; }
+    .footer-left-bottom {
+      width: 100%;
+      height: 25%; }
+      .footer-left-bottom-head {
+        width: 100%;
+        height: 25%;
+        padding: 0 1rem; }
+        @media (max-width: 880px) {
+          .footer-left-bottom-head {
+            display: none; } }
+      .footer-left-bottom-body {
+        width: 100%;
+        height: 75%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center; }
+        .footer-left-bottom-body-social {
+          width: 10%;
+          height: 60%; }
+          .footer-left-bottom-body-social__link {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center; }
+          .footer-left-bottom-body-social__img {
+            object-fit: cover;
+            max-width: 100%;
+            max-height: 100%;
+            filter: invert(1);
+            opacity: 0.7;
+            transition: all var(--transition-time) ease-in-out; }
+          .footer-left-bottom-body-social__link:hover .footer-left-bottom-body-social__img {
+            opacity: 1; }
+        @media (max-width: 880px) {
+          .footer-left-bottom-body {
+            justify-content: center; } }
+    @media (max-width: 880px) {
+      .footer-left {
+        width: 90%; } }
+  .footer-right {
+    width: 20%;
+    height: 100%;
+    display: flex;
+    flex-flow: column; }
+    .footer-right-top, .footer-right-bottom {
+      width: 100%;
+      height: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+      .footer-right-top-image, .footer-right-bottom-image {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+        .footer-right-top-image a, .footer-right-bottom-image a {
+          width: 100%;
+          height: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center; }
+          .footer-right-top-image a img, .footer-right-bottom-image a img {
+            object-fit: cover;
+            max-width: 80%;
+            max-height: 80%;
+            border-radius: 10px; }
+    @media (max-width: 880px) {
+      .footer-right {
+        display: none;
+        width: 0; } }
 
 .material-icons {
   user-select: none;
