--- a/src/style.css
+++ b/src/style.css
@@ -393,6 +393,8 @@ a {
         flex-flow: column;
         align-items: center;
         justify-content: center; }
+        .home-hero-content-mid span {
+          transition: all var(--transition-time) ease-in-out; }
         @media (max-width: 880px) {
           .home-hero-content-mid {
             width: 100%; } }
@@ -550,6 +552,12 @@ a {
       @media (max-width: 880px) {
         .home-duration-timer {
           width: 100%; } }
+  .home-buttons {
+    height: 10rem;
+    background-color: rgba(0, 0, 0, 0.75);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center; }
 
 @keyframes bounce {
   0% {
@@ -730,6 +738,114 @@ a {
       .footer-right {
         display: none;
         width: 0; } }
+
+button {
+  background: none;
+  color: inherit;
+  border: none;
+  outline: none;
+  font: inherit;
+  text-decoration: inherit;
+  text-transform: inherit;
+  text-shadow: inherit;
+  text-rendering: inherit;
+  text-size-adjust: inherit;
+  text-indent: inherit;
+  text-align: inherit;
+  appearance: inherit; }
+  button:hover, button:active, button:focus, button:focus-visible, button:focus-within {
+    border: none;
+    outline: none; }
+
+.btn {
+  margin: 0.25rem 0.5rem;
+  padding: 0.825rem 1.375rem;
+  background-color: transparent;
+  border: 5px solid rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.25rem;
+  font-weight: 550;
+  cursor: pointer;
+  user-select: none;
+  line-height: 1.5;
+  transition: all var(--transition-time) ease-in-out;
+  background-color: var(--indigo);
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12); }
+  .btn::before {
+    content: "";
+    position: absolute;
+    top: 5%;
+    left: 50%;
+    width: 2.75rem;
+    height: 3rem;
+    border-radius: 15px 25px 20px 17.5px;
+    background-color: rgba(255, 255, 255, 0.3);
+    z-index: 0;
+    transition: all var(--transition-time) ease-in-out;
+    animation: wavy 10s linear infinite; }
+  @media (max-width: 672px) {
+    .btn {
+      padding: 0.6rem 0.75rem; } }
+  .btn-sm {
+    font-size: 0.875rem;
+    padding: 0.6rem 1rem;
+    font-weight: 400; }
+  .btn-lg {
+    font-size: 1.125rem;
+    padding: 1rem 1.6rem;
+    font-weight: 550; }
+  .btn:hover {
+    border: 5px solid rgba(255, 255, 255, 0.1); }
+    .btn:hover::before {
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.1);
+      top: 0;
+      left: 0;
+      border-radius: 0;
+      animation: none; }
+  .btn:active, .btn:focus {
+    border: 5px solid rgba(0, 0, 0, 0.5); }
+
+@keyframes wavy {
+  0% {
+    transform: rotate(0deg);
+    left: 0%; }
+  10% {
+    transform: rotate(36deg);
+    left: 16%; }
+  20% {
+    transform: rotate(72deg);
+    left: 32%; }
+  30% {
+    transform: rotate(108deg);
+    left: 48%; }
+  40% {
+    transform: rotate(144deg);
+    left: 64%; }
+  50% {
+    transform: rotate(180deg);
+    left: 80%; }
+  60% {
+    transform: rotate(216deg);
+    left: 64%; }
+  70% {
+    transform: rotate(252deg);
+    left: 48%; }
+  80% {
+    transform: rotate(288deg);
+    left: 32%; }
+  90% {
+    transform: rotate(234deg);
+    left: 16%; }
+  100% {
+    transform: rotate(360deg);
+    left: 0%; } }
 
 .material-icons {
   user-select: none;
