--- a/src/style.css
+++ b/src/style.css
@@ -1121,6 +1121,32 @@ textarea {
     background-color: var(--primary-4);
     color: var(--bgcolor); }
 
+.snackbar {
+  background-color: var(--tcolor-400);
+  color: var(--bgcolor);
+  position: fixed;
+  bottom: 2rem;
+  left: 2rem;
+  z-index: 2000;
+  border-radius: 5px;
+  padding: 0.5rem 0.25rem;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  min-width: 5rem;
+  height: 3.5rem;
+  overflow: hidden;
+  transform: all var(--transition-time) ease-in-out; }
+  .snackbar-text {
+    width: 100%;
+    height: 100%;
+    padding: 0.5rem 2rem 0.5rem 1rem;
+    background: transparent;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center; }
+
 .material-icons {
   user-select: none;
   cursor: pointer;
