--- a/src/style.css
+++ b/src/style.css
@@ -557,6 +557,9 @@ main {
     background-color: rgba(0, 0, 0, 0.75);
     display: flex;
     flex-flow: column; }
+    @media (max-width: 880px) {
+      .home-navigation {
+        height: 50vh; } }
     .home-navigation-top, .home-navigation-bottom {
       width: 100%;
       height: 25%;
@@ -1062,8 +1065,9 @@ main {
           align-items: flex-end; }
         .team-section__body .person-subtitle {
           height: 20%;
-          font-size: 0.875rem;
-          align-items: center; }
+          font-size: 0.9rem;
+          align-items: center;
+          font-family: "Google Sans", Cabin, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; }
         .team-section__body .person-socials {
           height: 25%;
           display: flex;
@@ -1212,6 +1216,133 @@ main {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start; }
+
+.about {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-flow: column;
+  background-color: var(--indigo-400); }
+  .about-head {
+    width: 100%;
+    height: 25vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    line-height: 3rem;
+    font-family: Audiowide, sans-serif;
+    color: var(--bgcolor);
+    background-color: var(--indigo);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 60%, 50% 100%, 0% 60%); }
+    @media (max-width: 880px) {
+      .about-head {
+        height: 18.75vh; } }
+    @media (max-width: 672px) {
+      .about-head {
+        height: 12.5vh;
+        clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%); } }
+    .about-head span {
+      padding: 1rem;
+      position: relative;
+      transition: all var(--transition-time) ease-in-out;
+      white-space: nowrap; }
+  .about-body {
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+    justify-content: flex-start;
+    align-items: center; }
+    .about-body-container {
+      width: 75%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 1rem 0;
+      background-blend-mode: darken;
+      box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12);
+      transition: all var(--transition-time) ease-in-out; }
+      .about-body-container:hover {
+        transform: scale(1.05); }
+      @media (max-width: 880px) {
+        .about-body-container {
+          width: 80%; } }
+      @media (max-width: 880px) {
+        .about-body-container {
+          width: 90%; } }
+      .about-body-container:nth-child(1) {
+        flex-flow: row;
+        background-color: rgba(255, 255, 255, 0.5);
+        color: var(--tcolor); }
+        @media (max-width: 880px) {
+          .about-body-container:nth-child(1) {
+            flex-flow: column; } }
+      .about-body-container:nth-child(2) {
+        flex-flow: row-reverse;
+        background-color: rgba(0, 0, 0, 0.5);
+        color: var(--bgcolor); }
+        @media (max-width: 880px) {
+          .about-body-container:nth-child(2) {
+            flex-flow: column; } }
+      .about-body-container:nth-child(3) {
+        flex-flow: row;
+        background-color: rgba(255, 255, 255, 0.5);
+        color: var(--tcolor); }
+        @media (max-width: 880px) {
+          .about-body-container:nth-child(3) {
+            flex-flow: column; } }
+      .about-body-container:nth-child(4) {
+        flex-flow: row-reverse;
+        background-color: rgba(0, 0, 0, 0.5);
+        color: var(--bgcolor); }
+        @media (max-width: 880px) {
+          .about-body-container:nth-child(4) {
+            flex-flow: column; } }
+      .about-body-container > * {
+        width: 50%;
+        height: 100%;
+        display: flex;
+        justify-content: center; }
+        @media (max-width: 880px) {
+          .about-body-container > * {
+            width: 90%;
+            height: 50%; } }
+    .about-body-image {
+      align-items: center;
+      padding: 1.5rem 0; }
+      @media (max-width: 880px) {
+        .about-body-image {
+          padding: 0.5rem 0; } }
+      .about-body-image__img {
+        object-fit: cover;
+        max-width: 70%;
+        max-height: 70%;
+        transition: all var(--transition-time) ease-in-out;
+        filter: opacity(0.8);
+        transform: scale(1.025);
+        padding: 1rem;
+        border: 10px solid transparent; }
+        .about-body-image__img:hover {
+          filter: opacity(1);
+          transform: scale(1);
+          border-top: 10px solid var(--green);
+          border-right: 10px solid var(--green-700);
+          border-bottom: 10px solid var(--green-700);
+          border-left: 10px solid var(--green);
+          padding: 1rem; }
+    .about-body-content {
+      padding: 2rem 1rem;
+      align-items: flex-start;
+      flex-flow: column; }
+      @media (max-width: 880px) {
+        .about-body-content {
+          padding: 0.5rem 1rem 1rem 1rem; } }
+      .about-body-content ul {
+        margin: 1rem 0; }
+      .about-body-content li {
+        padding: 0.25rem 0; }
+        .about-body-content li::marker {
+          content: " > "; }
 
 button {
   background: none;
