--- a/src/style.css
+++ b/src/style.css
@@ -1597,6 +1597,128 @@ main {
         .events-event-content li::marker {
           content: " > "; }
 
+:root {
+  --mac-red: #f35a56;
+  --mac-yellow: #febc33;
+  --mac-green: #5ec341;
+  --mac-bgcolor: #161719;
+  --mac-tcolor: #4fc2ee; }
+
+.event {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .event-mac {
+    width: 95%;
+    height: 90%;
+    border-radius: 8px;
+    background-color: var(--mac-bgcolor);
+    color: var(--bgcolor);
+    overflow: hidden; }
+    .event-mac-head {
+      width: 100%;
+      height: 2.15rem;
+      height: 5%;
+      background-color: rgba(255, 255, 255, 0.25);
+      display: flex;
+      justify-content: space-between;
+      align-items: center; }
+      .event-mac-head-buttons {
+        color: var(--tcolor);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0 0.5rem; }
+      .event-mac-head__button {
+        border-radius: 500px;
+        width: 0.875rem;
+        height: 0.875rem;
+        margin: 0 0.25rem;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+        .event-mac-head__button:nth-child(1) {
+          background-color: var(--mac-red); }
+        .event-mac-head__button:nth-child(2) {
+          background-color: var(--mac-yellow); }
+        .event-mac-head__button:nth-child(3) {
+          background-color: var(--mac-green); }
+        .event-mac-head__button .material-icons {
+          width: 100%;
+          height: 100%;
+          font-size: 0.75rem;
+          opacity: 0;
+          transition: all var(--transition-time) ease-in-out; }
+        .event-mac-head__button:hover .material-icons {
+          opacity: 1; }
+      .event-mac-head-title {
+        text-align: center;
+        font-size: 1.25rem; }
+      .event-mac-head-null {
+        width: 5.125rem; }
+    .event-mac-body {
+      width: 100%;
+      height: 95%;
+      position: relative; }
+      .event-mac-body-buttons {
+        position: absolute;
+        right: 1rem;
+        top: 1rem; }
+      .event-mac-body__button {
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        border-radius: 500px;
+        padding: 0.5rem;
+        margin: 0.25rem 0.5rem;
+        cursor: pointer;
+        transition: all var(--transition-time) ease-in-out; }
+        .event-mac-body__button:hover {
+          border: 1px solid rgba(255, 255, 255, 0.5); }
+        .event-mac-body__button:active, .event-mac-body__button:focus {
+          border: 1px solid rgba(255, 255, 255, 0.5); }
+        .event-mac-body__button .material-icons {
+          width: 100%;
+          height: 100%;
+          font-size: 1.25rem; }
+      .event-mac-body-container {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+      .event-mac-body-images {
+        width: 40%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-blend-mode: darken;
+        background-color: rgba(0, 0, 0, 0.5);
+        background-position-x: center;
+        background-position-y: center; }
+      .event-mac-body-content {
+        width: 60%;
+        height: 100%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        flex-flow: column; }
+      .event-mac-body-head {
+        width: 100%;
+        height: 15%;
+        padding: 0.75rem 1.5rem;
+        font-size: 2.5rem;
+        line-height: 3rem;
+        text-transform: uppercase;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start; }
+        .event-mac-body-head__text {
+          width: 100%; }
+
 button {
   background: none;
   color: inherit;
