--- a/src/style.css
+++ b/src/style.css
@@ -1014,6 +1014,7 @@ main {
     font-size: 2rem; }
     .team-section__head {
       width: 100%;
+      padding: 0 0.5rem;
       display: flex;
       justify-content: flex-start;
       align-items: center; }
@@ -1035,7 +1036,7 @@ main {
           font-size: 0.875rem;
           background-size: cover;
           background-repeat: no-repeat;
-          background-blend-mode: darken;
+          background-blend-mode: lighten;
           display: flex;
           flex-flow: column;
           justify-content: center;
@@ -1049,7 +1050,7 @@ main {
             visibility: hidden;
             transition: all var(--transition-time) ease-in-out; }
           .team-section__body .person-box:hover {
-            background-color: rgba(0, 0, 0, 0.5);
+            background-color: rgba(255, 255, 255, 0.5);
             outline: 12px solid rgba(255, 255, 255, 0.25);
             transform: scale(1.05);
             box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12); }
@@ -1059,7 +1060,6 @@ main {
         .team-section__body .person-name, .team-section__body .person-subtitle {
           height: 30%;
           font-size: 1.25rem;
-          color: var(--bgcolor);
           white-space: nowrap;
           overflow: hidden;
           text-overflow: ellipsis;
@@ -1088,8 +1088,7 @@ main {
           .team-section__body .person-social img {
             object-fit: cover;
             max-width: 50%;
-            max-height: 50%;
-            filter: invert(1); }
+            max-height: 50%; }
 
 .timeline {
   width: 100%;
@@ -1609,14 +1608,21 @@ main {
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-blend-mode: lighten;
+  background-color: rgba(255, 255, 255, 0.5);
+  background-position-x: center;
+  background-position-y: center; }
   .event-mac {
     width: 95%;
     height: 90%;
     border-radius: 8px;
     background-color: var(--mac-bgcolor);
     color: var(--bgcolor);
-    overflow: hidden; }
+    overflow: hidden;
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12); }
     .event-mac-head {
       width: 100%;
       height: 2.15rem;
@@ -1718,6 +1724,50 @@ main {
         justify-content: flex-start; }
         .event-mac-body-head__text {
           width: 100%; }
+      .event-mac-body-details {
+        width: 95%;
+        height: 100%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        flex-flow: column;
+        padding: 1.5rem; }
+      .event-mac-body-about {
+        padding: 0 0.5rem; }
+        .event-mac-body-about__content {
+          padding: 0.5rem; }
+      .event-mac-body-rules__ul {
+        list-style: none;
+        padding: 0 2rem; }
+      .event-mac-body-rules__li {
+        padding: 0.5rem;
+        margin: 0 0.5rem;
+        color: var(--mac-tcolor); }
+        .event-mac-body-rules__li::marker {
+          content: " > ";
+          color: var(--bgcolor); }
+      .event-mac-body-prizes__ul {
+        width: 100%;
+        list-style: none;
+        padding: 0 2rem; }
+      .event-mac-body-prizes__li {
+        padding: 0.5rem;
+        margin: 0 0.5rem;
+        color: var(--mac-tcolor);
+        display: flex;
+        justify-content: flex-start;
+        align-items: center; }
+      .event-mac-body-prizes__image {
+        width: 15%;
+        height: 100%; }
+      .event-mac-body-prizes__img {
+        object-fit: cover;
+        max-width: 100%;
+        max-height: 100%; }
+      .event-mac-body-prizes__text {
+        width: 85%;
+        height: 100%;
+        padding: 0 1rem; }
 
 button {
   background: none;
